Prevent interval indicators from wrapping

--- a/qt/aqt/data/web/css/reviewer-bottom.scss
+++ b/qt/aqt/data/web/css/reviewer-bottom.scss
@@ -65,6 +65,7 @@ button {
 .nobold,
 .stattxt {
     position: absolute;
+    white-space: nowrap;
     top: -5px;
     left: 50%;
     transform: translateX(-50%);
